--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "aws-cdk-lib": "2.160.0",
+    "cdk-ecr-deployment": "^3.0.115",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
   }
